--- a/arches_hip/templates/views/forms/related-files.htm
+++ b/arches_hip/templates/views/forms/related-files.htm
@@ -97,7 +97,7 @@
 
                             <div style="margin-left: 20px; padding-top: 5px;" id="links">
                                 <div data-bind="foreach: getBranchLists()">
-                                    <div data-bind="if: nodes.get('THUMBNAIL.E62', 'value') !== ''" style="position: relative; display: inline-block; margin:1px;">
+                                    <div data-bind="if: nodes.get('THUMBNAIL.E62', 'value') !== '' && nodes.get('FILE_PATH.E62', 'value') !== ''" style="position: relative; display: inline-block; margin:1px;">
                                         <a style="position:absolute; background-color:rgba(0, 0, 0, 0.5); padding-left: 4px; width: 20px;" data-bind="click: $parent.editItem.bind($parent)"><i class="fa fa-edit" style="color:white;"></i></a>
                                         <a title="" data-gallery="links2" data-bind="attr: { href: nodes.get('FILE_PATH.E62', 'value'), title: nodes.get('TITLE.E41', 'label')}" target="_blank">
                                             <img alt="" data-bind="attr: { src: nodes.get('THUMBNAIL.E62', 'value')}">
@@ -138,29 +138,12 @@
                             <div class="col-xs-12">
                                 
                                 <dl data-bind="foreach: getBranchLists()">
-                                    <div data-bind="if: nodes.get('THUMBNAIL.E62', 'value') === ''">
+                                    <div data-bind="if: nodes.get('THUMBNAIL.E62', 'value') === '' && nodes.get('FILE_PATH.E62', 'value') !== ''">
                                         <dd class="margin-left-5">
                                             <div class="arches-crud-record">
                                                 <a title="{% trans "Download this file" %}" data-bind="attr: { href: nodes.get('FILE_PATH.E62', 'value')}" target="_blank"><i class="fa fa-cloud-download"></i></a>
                                                 <a href="#" id="related-1" class="arches-CRUD-child info-link related" title="{% trans "Edit this file" %}" data-bind="text: nodes.get('TITLE.E41', 'value'), click: $parent.editItem.bind($parent)"></a>&nbsp; <span class="text-muted" data-bind="text: '({% trans "relation" %}: ' + relationshiptypelabel() + ', {% trans "format" %}: ' + nodes.get('FILE_PATH.E62', 'value').split('.')[1] + ')'"></span>
                                             </div>
-
-                                            <!-- Related Resource Data -->
-                                            <div id="related-1-crud" class="arches-related-resource" style="display: none;">
-                                                
-                                                <!-- Title/Sub-title -->
-                                                <h5 class="arches-search-title arches-related-resource-title" style="" href="#">{% trans "Related File" %} &nbsp;
-                                                
-                                                    <span class="">
-                                                        <small class="arches-search-subtitle"><i class="fa fa-file-o"></i>{% trans "Information Resource" %}</small>
-                                                    </span>
-
-                                                </h5>
-                                                <!-- End Title/Sub-title -->
-
-                                            </div>
-                                            <!-- End Related Resource Data -->
-
                                         </dd>
                                     </div>
                                    
@@ -177,7 +160,7 @@
                 <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
                 <!-- Edit File Resource Modal -->
-                <div id="EditFileResourceModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div id="edit_file_resource_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content no-corners">
                           
