--- a/arches_hip/templates/views/forms/location.htm
+++ b/arches_hip/templates/views/forms/location.htm
@@ -60,14 +60,14 @@
 
                                     <div class="arches-basemap-entry" style="margin-right: 7px;">
                                 
-                                        <div class="" style="">
+                                        <div>
                                             <a data-bind="attr: { id: id, title: name }" class="basemap info-click" data-rel="" href="javascript:void(0);">
                                                 <span class="">  
                                                     <img data-bind="attr: { src: icon }" class="arches-basemap-thumbnail" alt="" />
                                                     <span class="zoom-icon"></span>                   
                                                 </span>                                              
                                             </a>                    
-                                            <span class="arches-basemap-caption-search">
+                                            <span class="arches-basemap-caption-search" style="width: 255px;">
                                                 <a data-bind="attr: { id: id }, text: name" class="caption-text-search hover-effect basemap info-click" href="javascript:void(0);"> </a>
                                             </span>
                                         </div>
