adding links to edit resources

--- a/arches_hip/templates/views/reports/ACTIVITY.E7.htm
+++ b/arches_hip/templates/views/reports/ACTIVITY.E7.htm
@@ -28,6 +28,11 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <!-- Project Name (screens small and bigger)-->
             <div class="hidden-sm hidden-xs col-sm-8">
                 <h1 class="pull-left arches-breadcrumb-title"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
+                {% if user_can_edit == True %}
+                    <a href="{% url 'resource_manager' report_info.source.entitytypeid 'summary' report_info.source.entityid %}" class="info-link edit-link report-header-link">
+                        <i class="arches-search-link fa fa-edit"></i><span class="arches-search-link">{% trans 'Edit' %}</span>
+                    </a>
+                {% endif %}
             </div>
 
             <!-- Project Name (screens extra small)-->
@@ -44,6 +49,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <a href="#map" class="info-link navigate-map"><span class="arches-search-link">{% trans 'Map' %}</span></a>
                     </li>
 
+                    {% if user_can_edit == True %}
+                    <li>
+                        <i class="arches-search-link fa fa-edit"></i>
+                        <a href="{% url 'resource_manager' report_info.source.entitytypeid 'summary' report_info.source.entityid %}" class="info-link edit-link"><span class="arches-search-link">{% trans 'Edit' %}</span></a>
+                    </li>
+                    {% endif %}
+                    
                 </ul>
                 <hr class="margin-top-minus-10 margin-bottom-10" style="border-width: 0px;">
             </div>
