adding related resources form to all resource types, a little style fix for term search in related resources form

--- a/arches_hip/templates/views/forms/related-resources.htm
+++ b/arches_hip/templates/views/forms/related-resources.htm
@@ -83,7 +83,7 @@
 
 
                     <!--=== Search Widget Block ===-->
-                    <div class="" style="padding-bottom: 10px; padding-top: 30px; margin-bottom: 10px;">
+                    <div class="" style="padding-bottom: 10px; padding-top: 30px; margin-bottom: 10px; margin-right: 20px;">
                         
                         <!-- Search Terms -->
                         <div class="">
