--- a/arches_hip/templates/views/forms/related-resources.htm
+++ b/arches_hip/templates/views/forms/related-resources.htm
@@ -153,50 +153,9 @@
                                             </span>
                                         </h4>
 
-                                        <!-- Sub-header -->
-                                        <ul class="list-inline up-ul">
-                                            {% if user_can_edit == True %}
-                                            <li>
-                                                <i class="arches-search-link fa fa-pencil"></i>&nbsp;
-                                                <a href="" data-bind="attr: {'href': 'resources/' +  entitytypeid + '/summary/' + resourceid}"><span class="arches-search-link">{% trans "Edit" %}</span></a>
-                                            </li>
-                                            {% endif %}
-
-                                            <li>
-                                                <i class="arches-search-link fa fa-sitemap"></i>
-                                                <a href="javascript:void(0);" class="info-link related-resources-graph" data-bind="attr: {'data-resourceid': resourceid, 'data-primaryname': primaryname, 'data-entitytypeid': entitytypeid}"><span class="arches-search-link" data-bind="attr: {'data-resourceid': resourceid, 'data-primaryname': primaryname, 'data-entitytypeid': entitytypeid}">{% trans "Related Resources" %}</span></a>
-                                            </li>
-
-                                            <li data-bind="visible: geometries().length > 0" >
-                                                <i class="arches-search-link fa fa-map-marker"></i>
-                                                <a href="javascript:void(0);" data-bind="attr: { 'data-resourceid': resourceid, 'data-geometries': JSON.stringify(geometries()) }" class="info-link navigate-map"><span class="arches-search-link">{% trans "Map" %}</span></a>
-                                            </li>
-
-                                        </ul>
-                                        <!-- End Item Sub-Header -->
-
                                         <!-- Item Description -->
-                                        <p data-bind="text:description" class="arches-search-item-description">
-                                        </p>
+                                        <p data-bind="text:description" class="arches-search-item-description"></p>
                                         <!-- End Item Description -->
-
-                                        <!-- Item Creator/Editor -->
-                                        <!-- This list is hidden for guests, but shown if user is logged in with editor privileges -->
-                                        <ul class="list-inline down-ul margin-bottom-10 {% if user_can_edit != True %}hidden{% endif %}">
-                                           
-                                            <li class="text-muted">
-                                                Entered April 14, 2014 by <a href="javascript:void(0);" class="text-primary">adalgity@getty.edu</a>
-                                            </li>
-
-                                            <li class="text-muted" style="padding-left: 0px;">
-                                                Last Updated: June 1, 2014 by <a href="javascript:void(0);" class="text-primary">phil.carlisle@eh.com</a>
-                                            </li>
-                                        </ul> 
-                                        <!-- End Item Creator/Editor -->
-
-                                        <div class="svg arches-related-resource-panel" style="display: none;">
-                                            {% include 'views/related-resources-graph.htm' %}
-                                        </div>
 
 
                                         <!-- Spacer -->
